Fixes rendering of site on mobile safari iPhone 5S

--- a/src/components/routecontrollers/land/land.scss
+++ b/src/components/routecontrollers/land/land.scss
@@ -54,7 +54,7 @@ button span, button div, a span {
   }
 }
 .trends-over-time {
-  height: 450px;
+  min-height: 475px;
   width: 100%;
 }
 .performance-over-time {
